<resources>
    <string name="app_name">bmi</string>
    <string name="kg">KG</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="cm">CM</string>
    <string name="calculate">Calculate</string>
    <string name="_75">75</string>
    <string name="_172">172</string>
    <string name="_22_2">22.2</string>
    <string name="normal_bmi_is_18_5_24_9">( Normal BMI is 18.5 24.9 )</string>
    <string name="start">Start</string>
</resources>